--- a/lab3/templates/home.template.html
+++ b/lab3/templates/home.template.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/static/style.css"></link>
     <title>Document</title>
   </head>
   <body>
     <h1>Danger Danger Will Robinson</h1>
+    <img src="/static/mindblown.jpg">
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates a
       sapiente cupiditate quam maiores. Magni rerum assumenda distinctio,
